# FluidVoice-Windows

./: .cursorrules  .gitignore  WINDOWS_PORT_ANALYSIS.md  roadmap_fv.md  tasks_fv.md
.cursor/rules/ai-agent-roles/: backlog-document-rules.mdc  change-management-agent.mdc  controlled-file-creation.mdc  dry.mdc  external-package-research.mdc  integrity-sense-checking.mdc  pbi-association.mdc  pbi-create.mdc  pbi-detail-documents.mdc  pbi-history-log.mdc  pbi-principles.mdc  pbi-start-implementation.mdc  pbi-submit-for-review.mdc  prd-alignment-sense-check.mdc  prohibition-unapproved-changes.mdc  scope-limitations.mdc  task-approve-done-steps.mdc  task-documentation.mdc  task-driven-development.mdc  task-granularity.mdc  task-history-log.mdc  task-index-file.mdc  task-mark-blocked.mdc  task-one-in-progress.mdc  task-principles.mdc  task-reject.mdc  task-significant-update.mdc  task-start-work.mdc  task-status-sync.mdc  task-status-synchronisation.mdc  task-submit-for-review.mdc  task-unblock.mdc  task-validation-rules.mdc  technical-documentation-apis.mdc  testing-general-principles.mdc  (+5 more)
MVP/: .gitignore  Cargo.toml  README.md  build_log.txt
MVP/src/: audio_feedback.rs  config.rs  main.rs  model.rs  telemetry.rs  transcriber.rs  tray.rs
MVP/temp_cmake_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test.sln
docs/PRD/: README.md
docs/project/: ARCHITECTURE.md  ASR_STRATEGY.md  DEVELOPMENT_GUIDE.md  PLATFORM_MAPPING.md  PRD.md  README.md  RISK_REGISTER.md  ROADMAP.md
(+76 files in other folders)
